# DiscordiaPy

./: .replit  CHANGELOG.md  LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: python-publish.yml
discordia/: __init__.py  client.py
discordiapy/: __init__.py  client.py
