[metadata]
name = DiscordiaPy
version = 0.1.0
description = simple python wrapper for discord's rest api
long_description = file: README.md
long_description_content_type = text/markdown
author = flux/shvr
license = MIT
project_urls =
    Homepage = https://github.com/shvrs/DiscordiaPy
    Source = https://github.com/shvrs/DiscordiaPy
    Tracker = https://github.com/shvrs/DiscordiaPy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
py_modules = client, __init__
python_requires = >=3.7
install_requires =
    requests

[options.package_data]
* = *.md, LICENSE

[options.extras_require]
dev =
    black
    pytest

[tool:pytest]
testpaths = tests
